{
    "name": "CarControllerManager",
    "maps": [
        {
            "name": "Gameplay",
            "id": "2d610a95-67a3-4c8d-9e21-bdf798ac3813",
            "actions": [
                {
                    "name": "LeftTouch",
                    "type": "Value",
                    "id": "7d65ebb4-10aa-4435-9a2e-7575a23fe98e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightTouch",
                    "type": "Value",
                    "id": "b870fb4f-c201-45bd-ab84-5bbda77b8ea2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "0cd7c7bd-0542-4752-ae1c-047beea0804b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "4c295cd6-f661-4f95-b0ab-d4d7272411f1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "191b1a78-0b35-4eb9-986e-1d2a492c20d6",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "ScaleVector2(y=0.5)",
                    "groups": "",
                    "action": "RightTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecf95618-7019-4ab6-9d50-3230f39d78e3",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "ScaleVector2(x=-1,y=0)",
                    "groups": "",
                    "action": "LeftTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62f77dab-f76b-4ed3-889a-e8549385a84f",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6820633-23a3-4d7d-b2f6-8ef356e30c2d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}